--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>1-gallery</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div class="gallery"></div>
+    <ul class="gallery"></ul>
     <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
